--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ header section figure figcaption p{margin-top: 1vh;text-align: center;}
  header .direita h2{font-size: 4.8rem; text-align: center;}
 }
 @media (max-width:650px){
-    header{flex-direction: column;}
-	header .esquerda{ width:100%; justify-content: center;align-items: center; height: 70vh;}
+    header{flex-direction: column; justify-content:flex-start; margin-top: 0; height: 100vh;}
+	header .esquerda{ width:100%; height: 100%; justify-content: center;align-items: center;}
 	header .direita{width: 100%; height: 100%;}
-	header section figure img{}
+	header section figure img{width:150px;height:150px; margin-top:20px; }
+
 }
