--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 *{margin: 0;padding: 0;font-size: 100%;box-sizing: border-box;font-family: sans-serif,arial,verdana; color: #fff;}
-header{ overflow: hidden; box-sizing: border-box; margin-top:3vh;width: 100vw; height:90vh;background-color: #888;display: flex;flex-direction: row;justify-content: space-between;align-items: center;}
+header{ overflow: hidden; box-sizing: border-box; margin-top:3vh;width: 100vw; height:90vh;background-color: #555;display: flex;flex-direction: row;justify-content: space-between;align-items: center;}
 header .esquerda{ overflow: hidden; width: 30%; height: calc(90vh - 1px);}
-header .direita{ overflow: hidden; width:70%; height:90vh; background-image: url('../img/foto3.jpg');background-position: center;background-size: cover; background-color: rgba(0, 0, 0, 1.0); display: flex; flex-direction: rown; justify-content: center; align-items: center;}
-header .direita h2{opacity: 1; padding: 100% 19.6%; text-align: center;font-size: 6.5rem;background-color: rgba(0, 0, 0, .6); transition-property: all;transition-duration: 1s;transition-timing-function: ease-in-out; cursor: pointer;text-shadow: 1px 1px #000;}
+header .direita{ overflow: hidden; width:70%; height:90vh; background-image: url('../img/foto3.jpg');background-position: center;background-size: cover; background-color: rgba(0, 0, 0, 1.0); display: flex; flex-direction: column; justify-content: center; align-items: center;}
+header .direita h2{ white-space: nowrap;    opacity: 1; padding: 100%; text-align: center;font-size:100px;background-color: rgba(0, 0, 0, .6); transition-property: all;transition-duration: 1s;transition-timing-function: ease-in-out; cursor: pointer;text-shadow: 1px 1px #000;}
 header .direita h2:hover{background-color: rgba(0, 0, 0, .1); opacity: 0;}
 header section{border: .2rem solid #ccc;} 
 header section figure{ width:100%;height:100%;display: flex;flex-direction: column;justify-content: center;align-items: center;}
@@ -25,5 +25,5 @@ header section figure figcaption p{margin-top: 1vh;text-align: center;}
 	header .direita{width: 100%; height: 100%;}
 	header section figure img{width:150px;height:150px; margin-top:20px; }
 	header section figure figcaption p{margin-bottom: 10px;}
-
+	header .direita h2{padding: 100%; font-size: 3.5rem;}
 }
